Rework translation framework.